Fixes #1058